# how-to-write-a-memory-profiler

./: .gitignore  README.md
slides/: ClangSupport.qml  InlineFrames.qml  Introduction.qml  OutputDataFormat.qml  Preloading.qml  RuntimeAttaching.qml  Slides.qml  StackUnwinding.qml  SymbolResolution.qml  Tracing.qml
src/: CMakeLists.txt
src/attach/: CMakeLists.txt  attach.cpp  attach.sh.in  notes.txt
src/attach_intercept/: CMakeLists.txt  attach_intercept.cpp  attach_intercept.sh.in
src/backtrace/: CMakeLists.txt  notes.txt  preload_backtrace.cpp  preload_backtrace.sh.in
src/got_overwriting/: CMakeLists.txt  got_overwriting.cpp
src/interning/: CMakeLists.txt  preload_interning.cpp  preload_interning.sh.in
src/mappings/: CMakeLists.txt  notes.txt  preload_mappings.cpp  preload_mappings.sh.in
src/preload/: CMakeLists.txt  notes.txt  preload.cpp  preload.sh.in
src/preload_more/: CMakeLists.txt  preload_more.cpp  preload_more.sh.in
src/shared/: alloc_hooks.h  alloc_preload_intercepts.h  elftable.h  hooks.h  mappings.h  module_hooks.h  module_preload_intercepts.h  recursionguard.h  trace.h  tracetree.h  track.h
src/symbolization/: CMakeLists.txt  symbolization.cpp  symbolizer.cpp  symbolizer.h
src/symbolization_clang/: CMakeLists.txt  symbolization.cpp  symbolizer.cpp  symbolizer.h
src/symbolization_inlines/: CMakeLists.txt  notes.txt  symbolization.cpp  symbolizer.cpp  symbolizer.h
src/test_clients/: CMakeLists.txt  delay.cpp  hello_world.cpp  one_malloc.cpp  vector.cpp
